--- a/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
@@ -24,6 +24,9 @@
 		background-color: #c48f45;
 		color: white;
 	}
+	p {
+		color: #c48f45;
+	}
 	mat-form-field {
 		display: block;
 		margin-bottom: 10px;
