test jquery touchswipe

--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
 <div class="container">
   <!-- loading -->
   <div class="text-center mt-5 pt-5" *ngIf="isLoading">
