added images for payment options

--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -37,5 +37,8 @@
       <button class="btn btn_gold btn-sm" routerLink="/" type="button">
         <i class="fas fa-arrow-left"></i>&nbsp;Continue Shopping
       </button>
+      <button class="btn btn_gold btn-sm" style="float:right;" routerLink="/paymentoptions" type="button">
+        <i class="fas fa-arrow-right"></i>&nbsp;Continue to Checkout
+      </button>
     </div>
     <br><br>
