--- a/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
@@ -3,34 +3,42 @@
 		width: 80%;
 		margin: 0 auto;
 	}
+
 	.wrap>* {
 		width: 100%;
 	}
+
 	#logowrap {
 		width: 100%;
 		margin: 0 auto;
 		text-align: center;
 	}
+
 	#ButtonsWrap {
 		width: 100%;
 		margin: 0 auto;
 		text-align: center;
 		margin-top: 10px;
 	}
+
 	.mat-form-field {
 		display: block;
 	}
+
 	.primaryButton {
 		background-color: #c48f45;
 		color: white;
 	}
+
 	p {
 		color: #c48f45;
 	}
+
 	mat-form-field {
 		display: block;
 		margin-bottom: 10px;
 	}
+
 	mat-dialog-actions {
 		display: block;
 	}
@@ -44,31 +52,36 @@
 		<h5 mat-dialog-title>Sign Up</h5>
 	</div>
 
-  <form [formGroup]="registrationForm" (ngSubmit)="onSubmit(registrationForm.value)">
-    <mat-dialog-content>
-		<mat-form-field>
-			<input matInput placeholder="Email address" formControlName="username" required>
-			<mat-error *ngIf="username.invalid">{{getErrorMessage()}}</mat-error>
+	<form [formGroup]="registrationForm" (ngSubmit)="onSubmit(registrationForm.value)">
+		<mat-dialog-content>
+			<mat-form-field>
+				<input matInput placeholder="Full Name" formControlName="fullname" required>
+				<mat-error *ngIf="fullname.invalid">{{getNameErrorMessage()}}</mat-error>
 			</mat-form-field>
-		<mat-form-field>
-			<input matInput placeholder="Password" formControlName="password" [type]="hide ? 'password' : 'text'" required>
-			<button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-				[attr.aria-pressed]="hide">
-				<mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-			</button>
-			<mat-error *ngIf="password.invalid">{{getErrorMessage2()}}</mat-error>
-		</mat-form-field>
+			<mat-form-field>
+				<input matInput placeholder="Email address" formControlName="username" required>
+				<mat-error *ngIf="username.invalid">{{getErrorMessage()}}</mat-error>
+			</mat-form-field>
+			<mat-form-field>
+				<input matInput placeholder="Password" formControlName="password" [type]="hide ? 'password' : 'text'"
+					required>
+				<button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+					[attr.aria-pressed]="hide">
+					<mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+				</button>
+				<mat-error *ngIf="password.invalid">{{getErrorMessage2()}}</mat-error>
+			</mat-form-field>
 
-		<mat-form-field>
-			<input matInput placeholder="Confirm Password" formControlName="confirmpassword"
-				[type]="hide ? 'password' : 'text'" required>
-			<button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-				[attr.aria-pressed]="hide">
-				<mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-			</button>
+			<mat-form-field>
+				<input matInput placeholder="Confirm Password" formControlName="confirmpassword"
+					[type]="hide ? 'password' : 'text'" required>
+				<button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+					[attr.aria-pressed]="hide">
+					<mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+				</button>
 
-			<mat-error *ngIf="confirmpassword.invalid">{{getErrorMessage3()}}</mat-error>
-		</mat-form-field>
+				<mat-error *ngIf="confirmpassword.invalid">{{getErrorMessage3()}}</mat-error>
+			</mat-form-field>
 		</mat-dialog-content>
 
 		<mat-dialog-actions>
@@ -79,9 +92,9 @@
 		</mat-dialog-actions>
 		<hr>
 	</form>
-	
+
 	<div id="ButtonsWrap">
-		<p>Already have a account?</p>
+		<p>Already have an account?</p>
 		<button mat-raised-button (click)="loginDialog()" class="primaryButton">Log in now!</button>
 	</div>
 </div>
