--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -71,6 +71,7 @@
     <div  *ngIf="productDetail['productDetail'] && productDetail['productDetail'].length!=0 && cartForm.controls.cartItems['controls'].length != 0">
       <div class="s2"><b>Select specifications</b></div><br>
       <form  [formGroup]="cartForm">
+
         <div class="row"  style="padding:0px;"  formArrayName="cartItems">
           <!-- <div style="margin-left:152px; font-size:13px;" class="s2">Quantity</div> -->
           <div style="font-size:16px; padding-right:0px; " class="col-md-6 col-sm-6 col-xs-12 s2" *ngFor="let detail of cartForm.controls.cartItems.controls, index as i">
@@ -80,9 +81,9 @@
               <input style="width:40px; height:20px; font-size:14px; border:none; border-bottom:1px solid #919191" type="number" min="0" formControlName="Quantity" placeholder="Quantity">
               <div *ngIf="cartForm.controls.cartItems.controls[i].controls.Quantity.invalid" class="invalid_feedback" style="padding-bottom:10px;" role="alert" >Only {{detail.value.AvailableStock}} are available. Please contact us if you need more!</div>
             </div>
-          </div>
-        </div>
-      </form>
+		  </div>
+		</div>		
+	  </form>
     </div>
 
     <!-- ngIf="cartForm.controls.cartItems['controls'].length != 0 || productDetail.price > 0" -->
@@ -94,7 +95,18 @@
       <div class="col-6 col-lg-6">
         <button class='btn btn_gold' (click)="manageCartProds()" [disabled] = "(0>= this.quantity || this.quantity > this.productDetail.availableStock) && (this.cartForm.invalid || this.isInputZero)">Add to cart</button>
       </div>
-    </div>
+	</div>
+	
+	<div class="mt-3">
+		<input 
+			bsDaterangepicker 
+			type="text" class="form-control" formControlName="dateRange" placeholder="Select your Desired time frame" 
+			style="width: 260px;"
+			[minDate]="minDate"
+			[maxDate]="maxDate"
+			[bsConfig]="dpConfig"
+			>
+	</div>
 
     <div class="row justify-content-end">
       <!-- <div class="col-6 col-lg-4 alert alert-danger mt-3" role="alert" *ngIf="!isStockAvailable" >Only {{productDetail.availableStock}} left in stock.</div> -->
