--- a/src/app/fcomponents/basic/user-dialog/forgot-password/forgot-password.component.html
+++ b/src/app/fcomponents/basic/user-dialog/forgot-password/forgot-password.component.html
@@ -40,12 +40,14 @@
 		<div id="FormWrap">
 			<mat-dialog-content>
 				<mat-form-field>
-					<input matInput placeholder="Your email" formControlName="email" required>
+					<input matInput placeholder="Your email" (ngModelChange)="update()" formControlName="email" required>
 					<mat-error *ngIf="email.invalid">{{ getEmailErrorMessage() }}</mat-error>
 				</mat-form-field>
-
+				<div *ngIf="this.forgotPasswordForm.valid && loggedinfailed" class="alert alert-danger text-center s2" role="alert">
+						{{errorMessage}}
+				</div>
 				<div id="ButtonsWrap">
-					<button mat-raised-button class="primaryButton mt-2">Send Reset Password Email</button>
+					<button mat-raised-button (click)="opendialog()" class="primaryButton mt-2">Send Reset Password Email</button>
 					<br>
 					<button mat-raised-button color="basic" mat-dialog-close class="my-3">Cancel</button>
 				</div>
