added service for mustmatch and added settoken for forgot password

--- a/src/app/fcomponents/basic/user-dialog/forgot-password/forgot-password.component.html
+++ b/src/app/fcomponents/basic/user-dialog/forgot-password/forgot-password.component.html
@@ -43,11 +43,11 @@
 					<input matInput placeholder="Your email" (ngModelChange)="update()" formControlName="email" required>
 					<mat-error *ngIf="email.invalid">{{ getEmailErrorMessage() }}</mat-error>
 				</mat-form-field>
-				<div *ngIf="this.forgotPasswordForm.valid && loggedinfailed" class="alert alert-danger text-center s2" role="alert">
+				<div *ngIf="this.forgotPasswordForm.valid && sendemailfailed" class="alert alert-danger text-center s2" role="alert">
 						{{errorMessage}}
 				</div>
 				<div id="ButtonsWrap">
-					<button mat-raised-button (click)="opendialog()" class="primaryButton mt-2">Send Reset Password Email</button>
+					<button mat-raised-button type="submit" class="primaryButton mt-2">Send Reset Password Email</button>
 					<br>
 					<button mat-raised-button color="basic" mat-dialog-close class="my-3">Cancel</button>
 				</div>
