added reset password post

--- a/src/app/fcomponents/reset-password/reset-password.component.html
+++ b/src/app/fcomponents/reset-password/reset-password.component.html
@@ -30,10 +30,10 @@
 		</mat-card-header>
 		<hr>
 
-		<form [formGroup]="resetPasswordForm">
+		<form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
 			<mat-form-field>
 				<input matInput 
-					placeholder="Password" 
+					placeholder="New Password" 
 					formControlName="password" 
 					[type]="hide ? 'password' : 'text'"
 					(ngModleChange)="update()" 
@@ -47,7 +47,7 @@
 
 			<mat-form-field>
 				<input matInput 
-					placeholder="Confirm Password" 
+					placeholder="Confirm New Password" 
 					formControlName="confirmpassword"
 					[type]="hide ? 'password' : 'text'" 
 					required>
@@ -58,13 +58,13 @@
 				<mat-error *ngIf="confirmpassword.invalid">{{getErrorMessage3()}}</mat-error>
 			</mat-form-field>
 
-			<div *ngIf="" class="alert alert-danger text-center">
+			<div *ngIf="this.resetPasswordForm.valid && resetFailed" class="alert alert-danger text-center s2" role="alert">
 				{{ errorMessage }}
 			</div>
 
 			<hr>
 			
-			<button mat-raised-button class="primaryButton">Reset Your Password</button>
+			<button mat-raised-button class="primaryButton" type="submit">Reset Your Password</button>
 		</form>
 	</mat-card>
 </div>
