Jump after reset passwd

--- a/src/app/fcomponents/reset-password/reset-password.component.html
+++ b/src/app/fcomponents/reset-password/reset-password.component.html
@@ -67,4 +67,10 @@
 			<button mat-raised-button class="primaryButton" type="submit">Reset Your Password</button>
 		</form>
 	</mat-card>
+
+	<!-- <div *ng>
+		<mat-card style="color:  #c48f45;">
+			<h4>Password reset successful!</h4>
+		</mat-card>
+	</div> -->
 </div>
