--- a/src/app/fcomponents/reset-password/reset-password.component.html
+++ b/src/app/fcomponents/reset-password/reset-password.component.html
@@ -64,7 +64,8 @@
 
 			<hr>
 			
-			<button mat-raised-button class="primaryButton" type="submit">Reset Your Password</button>
+			<button mat-raised-button routerLink='/userDashboard' color="basic">Cancel</button>
+			<button mat-raised-button class="primaryButton ml-2" type="submit">Reset Your Password</button>
 		</form>
 	</mat-card>
 
